--- a/framework/assets/stylish/components/_tabs.scss
+++ b/framework/assets/stylish/components/_tabs.scss
@@ -8,7 +8,7 @@
   .t_head{
     background-color: $tabs_head_color;
     >li{
-      cursor: pointer;@include transition-property(background-color);@include transition-duration(.3s); padding: $tabs_head_item_padding_v $tabs_head_item_padding_h; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+      cursor: pointer; @include single-transition(background-color, .35s, ease-in); padding: $tabs_head_item_padding_v $tabs_head_item_padding_h; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
       &.active{
         color: $tabs_head_color_active;  background-color:$tabs_head_bg_color_active;
       }
