--- a/framework/assets/stylish/components/_block.scss
+++ b/framework/assets/stylish/components/_block.scss
@@ -3,21 +3,21 @@
 
 
 .block{
-  @include move_bottom($block_move_bottom, $block_small, $block_large);
-  @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
-
+  @include move(bottom, $block_move_bottom);
+  @include move_in(bottom, $block_move_in_bottom);
 
   .b_title{
     position: relative;
-    @include move_bottom($block_b_title_move_bottom, $block_small, $block_large);
+    @include move(bottom, $block_b_title_move_bottom);
+    @include move_in(bottom, $block_b_title_move_in_bottom);
     @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
 
     .title{
       position: relative;
-      @include move_bottom($block_title_move_bottom, $block_small, $block_large);
-      @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
+      @include move(bottom, $block_title_move_bottom);
+      @include move_in(bottom, $block_title_move_in_bottom);
     }
-    .subtitle{@include font_style($medium, $mediumlh);}
+    .subtitle{}
   }
 }
 
@@ -25,14 +25,14 @@
 //Wrapper to correct for block margin
 .block_wrap
 .block_wrapper{
-  @include move_bottom(-$block_move_bottom, $block_small, $block_large);
+  @include move(bottom, -$block_move_bottom);
 }
 
 
 //Button set to move btn on responsive
 .btn_set{
-  margin-bottom: -($btn_set_btn_move); overflow: hidden;
+  @include move(bottom, -$btn_set_btn_move); overflow: hidden;
   .btn,
-  .btn_link{ margin-bottom:$btn_set_btn_move }
+  .btn_link{ @include move(bottom, $btn_set_btn_move);}
   .btn_link{ display: block}
 }
