--- a/framework/assets/stylish/components/_divider.scss
+++ b/framework/assets/stylish/components/_divider.scss
@@ -5,13 +5,13 @@
 // Divider
 .divider{
   width: 100%; display: block; margin-right: auto; margin-left: auto;
-  @include move_top($divider_move, $divider_small, $divider_large );
-  @include move_bottom($divider_move, $divider_small, $divider_large );
+  @include move(top, $divider_move);
+  @include move(bottom, $divider_move);
   @include border($divider_border_position, $divider_border_width, $divider_border_style, $divider_border_color);
 }
 
 
 //Spacer
 .spacer{
-  @include height($spacer_height, $spacer_small, $spacer_large);
+  @include height($spacer_height);
 }
