--- a/framework/assets/stylish/components/_other.scss
+++ b/framework/assets/stylish/components/_other.scss
@@ -5,18 +5,36 @@
 //Loader
 .loader,
 .loading{
-  &.active{
-    position: absolute; z-index: 5; width: 100%; height: 100%; top: 0; left: 0;background-color: rgba($color_white, .7); @include transition-duration(.3s); @include transition-property(all);
-    &.bg_color{background-color: rgba($color_mine_shaft, .4);}
-    &:after{@extend .sy_icon; @extend .sy_spinner:before; @extend .icon_spin; position: absolute; left: 50%; top: 50%; margin-top: -($loading_size/2);margin-left:-($loading_size/2); @include font_style($loading_size, $rem:false); color: $color_mine_shaft;}
-  }
+  display: block; position: absolute; z-index: 5; left: 50%; top: 50%; width: $loading_size; height: $loading_size; margin: (-$loading_size/2) 0 0 (-$loading_size/2);@include single-transition(all, .35s, ease-in);
 }
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
 //Overlay
 .overlay{
   &.active{
     position: fixed; left: 0; top: 0; width: 100%; height: 100%;
-    &.bg_color{background-color: rgba($color_mine_shaft, .4);}
+    &.bg_color{background-color: rgba($overlay_bg_color, $overlay_bg_opacity);}
   }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Image Background
+.bg_img{
+  background-position: center top; background-repeat: no-repeat; background-size: cover; height: 100%; @include opacity(0); @include single-transition(opacity, .35s, ease-in);
+
+  &.loaded{@include opacity(1);}
+
+  img{display: none;}
+
+  &.contain,
+  &[data-bgsize="contain"]{background-size: contain}
+
+  //Background Image position
+  @include bg_img_position();
 }
