--- a/framework/assets/stylish/global/_buttons.scss
+++ b/framework/assets/stylish/global/_buttons.scss
@@ -10,17 +10,10 @@ input[type=reset]{
   @include btn_style($btn_transform, $btn_font_family, $btn_radius, $btn_border_width, $btn_border_style, $btn_txt_align, $btn_width, $btn_txt_weight, $btn_display, $btn_white_space, $btn_txt_decoration, $btn_cursor, $btn_margin);
   @include appearance(none);
   @include font-smoothing();
-  @include transition-property(all);
-  @include transition-duration(.3s);
+  @include single-transition(all, .35s, ease-in);
 
-  //Default size
-  @include btn_size($btn_height, $btn_padding_v, $btn_padding_h, $btn_txt_size, $btn_line_height);
-
-  //Large size
-  &.btn_large, &[data-size="large"]{ @include btn_size($btn_height_large, $btn_padding_v_large, $btn_padding_h_large, $btn_txt_size_large, $btn_line_height_large )}
-
-  //Small size
-  &.btn_small, &[data-size="small"]{ @include btn_size($btn_height_small, $btn_padding_v_small, $btn_padding_h_small, $btn_txt_size_small, $btn_line_height_small)}
+  //Button Sizes
+  @include btn_sizes_generate();
 
   //Focus state
   &:focus{@include box-shadow(rgba($input_focus, 0.2) 0 0 10px);}
@@ -34,8 +27,8 @@ input[type=reset]{
   //Disabled buttons
   &.disabled, &:disabled{ }
 
-  //Set button to auto width
-  &.auto_width{width: auto; display: inline-block;}
+  //Set button to full width
+  &.block{width: 100%; display: block;}
 
   //Force btn not to break
   &.no_word_break{ word-break: normal }
@@ -59,7 +52,7 @@ input[type=reset]{
   /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
   /* Buttons Colors */
-  &.btn_mine_shaft{@include btn_color($color_mine_shaft, $color_white, $color_mine_shaft, lighten($color_mine_shaft, .5), $color_white, lighten($color_mine_shaft, .5) )}
+  @include btn_colors_generate();
 
 }
 
